fix: General refactor and improvements